// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`keeps .npmrc semantically idempotent after normalization 1`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 1 package.json file.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ package.json◇  Which packages should be configured?
│  package.json
│
◆  How should users install packages with automatic authentication?
│  ● Standard npm install (npm i — requires npm 12 or later)
│  ○ Custom npm script
│  ↑/↓ to navigate • Enter: confirm
└
◇  How should users install packages with automatic authentication?
│  Standard npm install
│
◇  Configuration files are ready.
│
◆  Changed 1 file in 1 package
│
│  ./
│    UNCHANGED  package.json
│    UPDATED    .npmrc
│
◇  Next step ───────────────────────────────────────────────────╮
│                                                               │
│  Install packages with authentication handled automatically:  │
│                                                               │
│  npm install                                                  │
│                                                               │
│  This requires npm 12 or later.                               │
│                                                               │
├───────────────────────────────────────────────────────────────╯
│
└  Authentication configuration complete. 😊

"
`;

exports[`keeps .npmrc semantically idempotent after normalization 2`] = `
"┌  📦🔑 Configure vsts-npm-auth-improved 📦🔑
│
◆  Where should package.json files be searched for?
│  ./█
└
◇  Where should package.json files be searched for?
│  ./
│
◇  Found 1 package.json file.
│
◆  Which packages should be configured?
│  ◻ ALL (Configure every package)
│  ◻ package.json
│  ↑/↓ to navigate • Space: select • Enter: confirm
└
│  ◻ ALL│  ◼ package.json◇  Which packages should be configured?
│  package.json
│
◆  How should users install packages with automatic authentication?
│  ● Standard npm install (npm i — requires npm 12 or later)
│  ○ Custom npm script
│  ↑/↓ to navigate • Enter: confirm
└
◇  How should users install packages with automatic authentication?
│  Standard npm install
│
◇  Configuration files are ready.
│
◆  No files changed
│
│  ./
│    UNCHANGED  package.json
│    UNCHANGED  .npmrc
│
◇  Next step ───────────────────────────────────────────────────╮
│                                                               │
│  Install packages with authentication handled automatically:  │
│                                                               │
│  npm install                                                  │
│                                                               │
│  This requires npm 12 or later.                               │
│                                                               │
├───────────────────────────────────────────────────────────────╯
│
└  Authentication configuration complete. 😊

"
`;
